# aoc2024

./: .gitignore  CMakeLists.txt  LICENSE  compiler_flags.cmake
src/: main.cpp  stdheaders.h
src/day_1/: day_1_header.h  day_1_imp.cpp
src/day_2/: day_2_header.h  day_2_imp.cpp
